<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cobalt_blue"
    tools:context=".FormSobrenos">

    <!-- Título "Sobre Nós" -->
    <TextView
        android:id="@+id/titulo_instalacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_sobre"
        android:textSize="@dimen/text_title"
        android:textColor="@color/offwhite"
        android:textStyle="bold"
        android:fontFamily="@font/chonkypumpkin"
        android:shadowColor="@color/midnight_blue"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/txt1"
        app:layout_constraintEnd_toEndOf="@id/txt1" />

    <!-- Fundo de texto - Container -->
    <View
        android:id="@+id/txt1"
        android:layout_width="380dp"
        android:layout_height="480dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/container_title"
        app:layout_constraintTop_toBottomOf="@id/titulo_instalacao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Primeiro texto de instrução -->
    <TextView
        android:id="@+id/text_instrucoes_1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/saiba"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/offwhite"
        android:justificationMode="inter_word"
        android:fontFamily="@font/librebaskerville"
        app:layout_constraintTop_toTopOf="@id/txt1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botão "Saiba Mais" -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_saibamais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/saibamais"
        android:textColor="@color/black"
        android:textSize="@dimen/text_button"
        android:textStyle="bold"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Botão de Voltar -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_voltar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttons_red"
        android:text="@string/txt_button_voltar"
        android:textSize="@dimen/buttons"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_saibamais"/>

</androidx.constraintlayout.widget.ConstraintLayout>
